tests/valid/teste.ts
let x: number = 5;

let y: string = "hello world";

let z: boolean = true;
