tests/invalid/testeNegativoCompleto.ts
let x: number = "not a number";
let y: string = 42;
let z: boolean = "true";

let invalidSum: number = a + s;
let invalidOp: boolean = flag + a;

let undeclaredVar: number = c + 1;

let multiError: string = b + flag;
